# bgci

./: .gitignore  Cargo.toml  README.md
config/: duel.toml  gnubg-cli-vs-pubeval.toml  gnubg-cli-vs-random.toml  pubeval-vs-random.toml
docs/: README.md  community-alignment.md  distributed-roadmap-v1.md  dueller.md  format-decisions.md  match-file-spec-v1.md  repo-readiness-plan.md  runtime-modes-v1.md  sqlite-schema-v1.md  ubgi-v0.1-spec.md
examples/: gnubg-cli-vs-pubeval.toml  gnubg-cli-vs-random.toml  pubeval-vs-random.toml
src/: checker.rs  common.rs  config.rs  duel_game.rs  duel_messages.rs  duel_runner.rs  duel_workers.rs  engine.rs  lib.rs  logging.rs  main.rs  output_paths.rs  report.rs  stats.rs  status_display.rs
src/commands/: check.rs  duel.rs  engine.rs  mod.rs  runs.rs  submit.rs
src/domain/: mod.rs
src/engines/: gnubg_cli.rs  hureval.rs  mod.rs  pipcount.rs  pubeval.rs  random.rs  runtime.rs
src/executor/: mod.rs
src/export/: mat.rs
src/managed/: mod.rs
